--- a/Distributer/Distributer.csproj
+++ b/Distributer/Distributer.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DistributerLib\DistributerLib.csproj" />
+  </ItemGroup>
+
 </Project>
