added config in tbon

--- a/Distributer/Distributer.csproj
+++ b/Distributer/Distributer.csproj
@@ -13,6 +13,9 @@
     <None Update="config.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="config.tbon">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
